--- a/styles.css
+++ b/styles.css
@@ -208,7 +208,7 @@ h1 {
   background-color: #27ae60;
   color: #fff;
   text-align: center;
-  padding: 15px 0;
+  padding: 10px 0;
   margin-top: 40px;
 }
 
@@ -450,4 +450,93 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 9999;
+}
+
+
+
+
+#scannerSection {
+  background-color: #f4f4f9;
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+#scannerSection h2 {
+  font-family: 'Poppins', sans-serif;
+  color: #1c3d7c;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+
+#scannerSection p {
+  font-family: 'Poppins', sans-serif;
+  color: #555;
+  font-size: 1.1rem;
+  margin-bottom: 20px;
+}
+
+#scanBtn {
+  background-color: #28a745;
+  color: white;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 25px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#scanBtn:hover {
+  background-color: #218838;
+  transform: scale(1.05);
+}
+
+#scanBtn:active {
+  background-color: #1c7c33;
+}
+
+
+
+#footer-text {
+    font-size: 13px;  /* Tamaño inicial, puedes modificarlo */
+    text-align: center;  /* Centrado */
+    color: #ffffff; /* Color gris oscuro */
+    font-family: 'Poppins', sans-serif; /* Familia de la fuente */
+}
+
+/* Puedes agregar reglas adicionales para diferentes tamaños de texto si lo deseas */
+@media (min-width: 768px) {
+    #footer-text {
+        font-size: 18px; /* En pantallas más grandes, el tamaño puede ser mayor */
+    }
+}
+
+    /* Estilo para las imágenes en la esquina superior */
+    .top-image {
+      position: absolute;
+      top: 10px;
+      left: 1px;
+      width: 54px; /* Ajusta el tamaño de la imagen del creador */
+      cursor: pointer;
+    }
+
+    .logo {
+      position: absolute;
+      top: 10px;
+      left: 55px; /* Ajusta la posición para que no se superponga con la imagen del creador */
+    }
+    
+    
+    
+    /* Estilo personalizado para hacer el botón de Google más pequeño */
+.google-signin-button {
+  transform: scale(0.7); /* Ajusta el tamaño con el valor que prefieras */
+  margin: 0 auto; /* Alinea el botón */
+  padding: 10px;
 }
