--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,7 @@ h1 {
   color: #fff;
   text-align: center;
   padding: 10px 0;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 @keyframes fadeIn {
@@ -472,7 +472,7 @@ body {
 
 @media (min-width: 768px) {
     #footer-text {
-        font-size: 18px;
+        font-size: 15px;
     }
 }
     .top-image {
@@ -493,4 +493,50 @@ body {
   transform: scale(0.7);
   margin: 0 auto;
   padding: 10px;
+}
+
+.history-container {
+    margin-top: 20px;
+    padding: 15px;
+    border: 1px solid #ddd;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    max-height: 300px;
+    overflow-y: auto;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.history-container a {
+    display: block;
+    margin-bottom: 10px;
+    color: #1e90ff;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.history-container a:hover {
+    text-decoration: underline;
+}
+
+#historyButton {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+#historyButton:hover {
+    background-color: #45a049;
+}
+
+.support-icon {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  cursor: pointer;
+  margin-left: 10px;
+  vertical-align: middle;
 }
