--- a/soporte.css
+++ b/soporte.css
@@ -206,3 +206,18 @@ body {
   margin-bottom: 8px;
   color: #555;
 }
+
+.JO {
+  font-size: 1.5em;
+    color: #3498db;
+}
+
+.JO2 {
+    color: #e67e22;
+}
+
+.JO1 {
+  font-size: 2em;
+  color: #2c3e50;
+  margin: 10px 0;
+}
